<resources>
    <string name="app_name">MessengerFintech</string>
    <string name="user_avatar">user_avatar</string>
    <string name="darrell_steward">Darrell Steward</string>
    <string name="lorem_ipsum">Hello! lorem ipsum test message dalshe zabil</string>
    <string name="write">Write something…</string>
    <string name="send_message">Send message</string>
    <string name="add_file">Attach the file</string>
    <string name="search_users_button">Search users button</string>
    <string name="users">Users…</string>
    <string name="send_button">Send button</string>
    <string name="chat_title">Chat Title</string>
    <string name="log_out">Log out</string>
    <string name="status">online</string>
    <string name="in_a_meeting">In a meeting</string>
    <string name="expand_stream">expand stream</string>
    <string name="online_status">online status</string>
    <string name="email">darrel@company.com</string>
    <string name="profile">Profile</string>
    <string name="people">People</string>
    <string name="channels">Channels</string>
    <string name="subscribed">"Subscribed"</string>
    <string name="all_streams">"All streams"</string>
    <string name="streams">Streams…</string>
    <string-array name="emojis">
        <item>😎</item>
        <item>😌</item>
        <item>😔</item>
        <item>😋</item>
        <item>😛</item>
        <item>😍</item>
        <item>😘</item>
        <item>😊</item>
        <item>😗</item>
        <item>😜</item>
        <item>😏</item>
        <item>😜</item>
        <item>😁</item>
        <item>👍</item>
        <item>🎃</item>
        <item>😚</item>
        <item>🙃</item>
        <item>😅</item>
        <item>😂</item>
        <item>😇</item>
        <item>😉</item>
        <item>😏</item>
        <item>😗</item>
        <item>😎</item>
        <item>😎</item>
        <item>😌</item>
        <item>😔</item>
        <item>😋</item>
        <item>😛</item>
        <item>😍</item>
        <item>😘</item>
        <item>😊</item>
        <item>😗</item>
        <item>😜</item>
        <item>😏</item>
        <item>😜</item>
        <item>😁</item>
        <item>👍</item>
        <item>🎃</item>
        <item>😚</item>
        <item>🙃</item>
        <item>😅</item>
        <item>😂</item>
        <item>😇</item>
        <item>😉</item>
        <item>😏</item>
        <item>😗</item>
        <item>😎</item>
    </string-array>
</resources>