<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cyan_color"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button_profile"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:contentDescription="@string/send_button"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_button" />

        <TextView
            android:id="@+id/chat_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_avatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/user_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:shapeAppearanceOverlay="@style/bigRoundedAvatar" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/darrell_steward"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_avatar" />

        <TextView
            android:id="@+id/user_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/in_a_meeting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/user_status"
            app:layout_constraintStart_toStartOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <TextView
            android:id="@+id/user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/status"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/user_name"
            app:layout_constraintStart_toEndOf="@id/user_action"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <Button
            android:id="@+id/log_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="20sp"
            android:theme="@style/buttonWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_avatar"
            app:layout_constraintVertical_bias="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>