<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_margin="10dp"
    android:background="@color/black">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/user_avatar"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedAvatar" />

    <ImageView
        android:id="@+id/online_status"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="2dp"
        android:contentDescription="@string/online_status"
        android:src="@drawable/ic_online_status"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/avatar" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:maxLines="1"
        android:text="@string/darrell_steward"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/email"
        android:textColor="@color/contact_email_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/nickname" />

</androidx.constraintlayout.widget.ConstraintLayout>