<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:paddingTop="60dp"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cyan_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button_chat"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:contentDescription="@string/send_button"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_button" />

        <TextView
            android:id="@+id/chat_title"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/chat_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/send_message_draft_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints="true"
            android:background="@drawable/emoji_background"
            android:hint="@string/write"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/message_field_hint"
            android:textFontWeight="400"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/send_message_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="5"
            android:contentDescription="@string/send_message"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_send_message"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/add_file_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="4"
            android:contentDescription="@string/add_file"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_file_to_message" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>