<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/sender_avatar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/avatar"
        app:shapeAppearanceOverlay="@style/roundedAvatar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/emoji_background"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/message_sender_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darrell_steward"
            android:textColor="@color/sender_nickname_text"
            android:textFontWeight="400"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="16sp" />
    </LinearLayout>

    <com.study.messengerfintech.customview.FlexBoxLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:smiles="smiling" />

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:customNum="5"
            app:smiles="winking" />

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:customNum="15"
            app:smiles="heart" />

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:customNum="3"
            app:smiles="sad" />

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:customNum="8"
            app:smiles="joy" />

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:customNum="1"
            app:smiles="not_interested" />

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:customNum="11"
            app:smiles="hug" />

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:customNum="7"
            app:smiles="party" />

        <com.study.messengerfintech.customview.Emoji
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/emoji_background"
            app:customNum="3"
            app:smiles="cry" />

    </com.study.messengerfintech.customview.FlexBoxLayout>
</merge>